--- a/src/StudentPortal/ClientApp/package.json
+++ b/src/StudentPortal/ClientApp/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
+    "@angular/animations": "^8.2.12",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "8.2.12",
     "@angular/compiler": "8.2.12",
@@ -25,15 +25,15 @@
     "@angular/router": "8.2.12",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.3.1",
     "chart.js": "^2.9.3",
-    "core-js": "^3.6.1",
+    "core-js": "^3.3.3",
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
     "ng2-charts": "^2.3.0",
-    "oidc-client": "^1.10.1",
+    "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
-    "rxjs": "^6.5.4",
+    "rxjs": "^6.5.3",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
@@ -41,17 +41,17 @@
     "@angular/cli": "^8.3.21",
     "@angular/compiler-cli": "8.2.12",
     "@angular/language-service": "8.2.12",
-    "@types/jasmine": "^3.4.6",
+    "@types/jasmine": "~3.4.4",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~12.11.6",
-    "codelyzer": "^5.2.1",
+    "codelyzer": "^5.2.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "typescript": "3.5.3"
   },
   "optionalDependencies": {
