--- a/src/StudentPortal/appsettings.json
+++ b/src/StudentPortal/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "student-portal-db": ""
   },
@@ -10,13 +11,6 @@
     "accessKey": "",
     "secretKey": ""
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
   "IdentityServer": {
     "Clients": {
       "StudentPortal": {
@@ -24,5 +18,20 @@
       }
     }
   },
-  "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "swagger": {
+    "enabled": true,
+    "includeSecurity": true,
+    "name": "v1",
+    "reDocEnabled": false,
+    "routePrefix": "docs",
+    "title": "Registration Service",
+    "version": "v1"
+  }
 }
